test/language/spec/stages/valid/monotonic_stages.topo
// Monotonic stage numbering

namespace proc {
  public:
    void run();
    fn run {
      stage<1> init();
      stage<2> compute();
      stage<3> finalize();
    }

  protected:
    void init();
    void compute();
    void finalize();
}
